Modification du serveur JS pour envoyer des citations au lieu d'etudiants

--- a/Docker Images/reverse-proxy/conf/sites-available/001-reverse-proxy.conf
+++ b/Docker Images/reverse-proxy/conf/sites-available/001-reverse-proxy.conf
@@ -1,8 +1,8 @@
  <VirtualHost *:80>
         ServerName demo.res.ch
 
-        ProxyPass "/api/students/" "http://172.17.0.3:3000/test/"
-        ProxyPassReverse "/api/students/" "http://172.17.0.3:3000/test/"
+        ProxyPass "/api/quote/" "http://172.17.0.3:3000/quote/"
+        ProxyPassReverse "/api/quote/" "http://172.17.0.3:3000/quote/"
 
         ProxyPass "/" "http://172.17.0.2:80/"
         ProxyPassReverse "/" "http://172.17.0.2:80/"
