--- a/Partie3/Docker Images/reverse-proxy/conf/sites-available/001-reverse-proxy.conf
+++ b/Partie3/Docker Images/reverse-proxy/conf/sites-available/001-reverse-proxy.conf
@@ -4,8 +4,8 @@
         #ErrorLog ${APACHE_LOG_DIR}/error.log
         #CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-        ProxyPass "/api/students/" "http://172.17.0.3:3000/"
-        ProxyPassReverse "/api/students/" "http://172.17.0.3:3000/"
+        ProxyPass "/api/quote/" "http://172.17.0.3:3000/quote/"
+        ProxyPassReverse "/api/quote/" "http://172.17.0.3:3000/quote/"
 
         ProxyPass "/" "http://172.17.0.2:80/"
         ProxyPassReverse "/" "http://172.17.0.2:80/"
